--- a/JenkinsFile
+++ b/JenkinsFile
@@ -12,7 +12,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                git branch: 'master', url: 'https://github.com/Akash4908/MavenAnsibleWebApp1.git'
+                git branch: 'main', url: 'https://github.com/Akash4908/MavenAnsibleWebApp1.git'
             }
         }
 
