--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -10,6 +10,6 @@
         remote_src: no
 
     - name: Restart Tomcat
-      systemd: cd ..
+      systemd:
         name: tomcat
         state: restarted
